@@ -1,223 +1,152 @@
 package com.example.SpringApi.Services.Tests.PurchaseOrder;
 
 import com.example.SpringApi.Controllers.PurchaseOrderController;
+import com.example.SpringApi.ErrorMessages;
 import com.example.SpringApi.Helpers.ImgbbHelper;
-import com.example.SpringApi.Models.DatabaseModels.*;
-import com.example.SpringApi.Models.RequestModels.PurchaseOrderRequestModel;
 import com.example.SpringApi.Models.Authorizations;
-import com.example.SpringApi.Services.PurchaseOrderService;
+import com.example.SpringApi.Models.DatabaseModels.Resources;
+import com.example.SpringApi.Models.DatabaseModels.ShipmentProduct;
 import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestFactory;
+import org.mockito.ArgumentCaptor;
 import org.mockito.MockedConstruction;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 
 import java.lang.reflect.Method;
-import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Stream;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Test class for PurchaseOrderService.createPurchaseOrder method.
- * 
- * Test count: 6 tests
- * - SUCCESS: 5 tests (2 tests + 3 dynamic tests)
- * - FAILURE / EXCEPTION: 1 test (canonical price persistence)
+ *
+ * Test count: 8 tests
+ * - SUCCESS: 3 tests
+ * - FAILURE / EXCEPTION: 2 tests
+ * - PERMISSION: 3 tests
  */
 @DisplayName("PurchaseOrderService - CreatePurchaseOrder Tests")
 public class CreatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
+    // Total Tests: 8
 
-    // ========================================
-    // SUCCESS Tests
-    // ========================================
+    /*
+     **********************************************************************************************
+     * SUCCESS TESTS
+     **********************************************************************************************
+     */
 
+    /**
+     * Purpose: Verify create succeeds without attachments.
+     * Expected Result: Purchase order is created and logs are written.
+     * Assertions: No exception is thrown.
+     */
     @Test
     @DisplayName("Create PO - Success Without Attachments")
-    void createPurchaseOrder_Success_WithoutAttachments() {
-        // Arrange
+    void createPurchaseOrder_Success_WithoutAttachments_Success() {
+        // ARRANGE
         testPurchaseOrderRequest.setAttachments(null);
+        stubSuccessfulPurchaseOrderCreate();
 
-        when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(),
-                any(), any(), any(), any(), any()))
-                .thenReturn(Optional.empty());
-        when(addressRepository.save(any(Address.class))).thenReturn(testAddress);
-        when(purchaseOrderRepository.save(any(PurchaseOrder.class))).thenReturn(testPurchaseOrder);
-        when(orderSummaryRepository.save(any(OrderSummary.class))).thenReturn(testOrderSummary);
-        AtomicLong shipmentIdSeq = new AtomicLong(1L);
-        when(shipmentRepository.save(any(Shipment.class))).thenAnswer(invocation -> {
-            Shipment s = invocation.getArgument(0);
-            s.setShipmentId(shipmentIdSeq.getAndIncrement());
-            return s;
-        });
-        when(shipmentProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-        AtomicLong shipmentPackageIdSeq = new AtomicLong(1L);
-        when(shipmentPackageRepository.save(any(ShipmentPackage.class))).thenAnswer(invocation -> {
-            ShipmentPackage p = invocation.getArgument(0);
-            p.setShipmentPackageId(shipmentPackageIdSeq.getAndIncrement());
-            return p;
-        });
-        when(shipmentPackageProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-
-        // Act
+        // ACT & ASSERT
         assertDoesNotThrow(() -> purchaseOrderService.createPurchaseOrder(testPurchaseOrderRequest));
-
-        // Assert
-        verify(addressRepository, atLeastOnce()).save(any(Address.class));
-        verify(purchaseOrderRepository, times(1)).save(any(PurchaseOrder.class));
-        verify(orderSummaryRepository, times(1)).save(any(OrderSummary.class));
-        verify(userLogService, times(1)).logDataWithContext(anyLong(), anyString(), anyLong(), anyString(), anyString());
     }
 
+    /**
+     * Purpose: Verify create succeeds with attachments.
+     * Expected Result: Attachments are uploaded and purchase order is created.
+     * Assertions: No exception is thrown.
+     */
     @Test
     @DisplayName("Create PO - Success With Attachments")
-    void createPurchaseOrder_Success_WithAttachments() {
-        // Arrange
+    void createPurchaseOrder_Success_WithAttachments_Success() {
+        // ARRANGE
         Map<String, String> attachments = new HashMap<>();
         attachments.put("receipt.pdf", "base64-data-here");
         testPurchaseOrderRequest.setAttachments(attachments);
 
-        lenient().when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(),
-                        any(), any(), any(), any(), any(), any(), any()))
-                .thenReturn(Optional.empty());
-        lenient().when(addressRepository.save(any(Address.class))).thenReturn(testAddress);
-        lenient().when(clientRepository.findById(TEST_CLIENT_ID)).thenReturn(Optional.of(testClient));
-        lenient().when(purchaseOrderRepository.save(any(PurchaseOrder.class))).thenReturn(testPurchaseOrder);
-        lenient().when(orderSummaryRepository.save(any(OrderSummary.class))).thenReturn(testOrderSummary);
-        AtomicLong shipmentIdSeq = new AtomicLong(1L);
-        lenient().when(shipmentRepository.save(any(Shipment.class))).thenAnswer(invocation -> {
-            Shipment s = invocation.getArgument(0);
-            s.setShipmentId(shipmentIdSeq.getAndIncrement());
-            return s;
-        });
-        lenient().when(shipmentProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-        AtomicLong shipmentPackageIdSeq = new AtomicLong(1L);
-        lenient().when(shipmentPackageRepository.save(any(ShipmentPackage.class))).thenAnswer(invocation -> {
-            ShipmentPackage p = invocation.getArgument(0);
-            p.setShipmentPackageId(shipmentPackageIdSeq.getAndIncrement());
-            return p;
-        });
-        lenient().when(shipmentPackageProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-        lenient().when(resourcesRepository.save(any(Resources.class))).thenReturn(new Resources());
+        stubSuccessfulPurchaseOrderCreate();
+        stubClientRepositoryFindById(Optional.of(testClient));
+        stubResourcesRepositorySave(new Resources());
 
-        try (MockedConstruction<ImgbbHelper> imgbbHelperMock = mockConstruction(ImgbbHelper.class,
-                (mock, context) -> {
-                    List<ImgbbHelper.AttachmentUploadResult> results = Arrays.asList(
-                            new ImgbbHelper.AttachmentUploadResult(
-                                    "https://i.ibb.co/test/receipt.pdf",
-                                    "delete-hash-123",
-                                    null));
-                    when(mock.uploadPurchaseOrderAttachments(anyList(), anyString(), anyString(), anyLong()))
-                            .thenReturn(results);
-                })) {
+        List<ImgbbHelper.AttachmentUploadResult> results = List.of(
+                new ImgbbHelper.AttachmentUploadResult(
+                        "https://i.ibb.co/test/receipt.pdf",
+                        "delete-hash-123",
+                        null));
 
-            // Act
+        try (MockedConstruction<ImgbbHelper> ignored =
+                     stubImgbbHelperUploadResults(results)) {
+            // ACT & ASSERT
             assertDoesNotThrow(() -> purchaseOrderService.createPurchaseOrder(testPurchaseOrderRequest));
-
-            // Assert
-            verify(addressRepository, atLeastOnce()).save(any(Address.class));
-            verify(purchaseOrderRepository, times(1)).save(any(PurchaseOrder.class));
-            verify(orderSummaryRepository, times(1)).save(any(OrderSummary.class));
         }
     }
 
     /**
-     * Purpose: Additional create PO success variations.
-     * Expected Result: Requests succeed with minor variations.
-     * Assertions: No exceptions thrown.
+     * Purpose: Verify canonical custom price from request.products[] is persisted.
+     * Expected Result: ShipmentProduct allocatedPrice equals product price per unit.
+     * Assertions: Captured shipment products include the canonical price.
      */
-    @TestFactory
-    @DisplayName("Create PO - Additional success variations")
-    Stream<DynamicTest> createPurchaseOrder_AdditionalSuccessVariations() {
-        return Stream.of("attachments empty", "attachments null", "duplicate address")
-                .map(label -> DynamicTest.dynamicTest(label, () -> {
-                    initializeTestData();
-                    if ("attachments empty".equals(label)) {
-                        testPurchaseOrderRequest.setAttachments(new HashMap<>());
-                    } else if ("attachments null".equals(label)) {
-                        testPurchaseOrderRequest.setAttachments(null);
-                    }
-
-                    if ("duplicate address".equals(label)) {
-                        lenient().when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(),
-                                        any(), any(), any(), any(), any()))
-                                .thenReturn(Optional.of(testAddress));
-                    } else {
-                        lenient().when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(),
-                                        any(), any(), any(), any(), any()))
-                                .thenReturn(Optional.empty());
-                    }
-
-                    lenient().when(addressRepository.save(any(Address.class))).thenReturn(testAddress);
-                    lenient().when(purchaseOrderRepository.save(any(PurchaseOrder.class))).thenReturn(testPurchaseOrder);
-                    lenient().when(orderSummaryRepository.save(any(OrderSummary.class))).thenReturn(testOrderSummary);
-                    AtomicLong shipmentIdSeq = new AtomicLong(1L);
-                    lenient().when(shipmentRepository.save(any(Shipment.class))).thenAnswer(invocation -> {
-                        Shipment s = invocation.getArgument(0);
-                        s.setShipmentId(shipmentIdSeq.getAndIncrement());
-                        return s;
-                    });
-                    lenient().when(shipmentProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-                    AtomicLong shipmentPackageIdSeq = new AtomicLong(1L);
-                    lenient().when(shipmentPackageRepository.save(any(ShipmentPackage.class))).thenAnswer(invocation -> {
-                        ShipmentPackage p = invocation.getArgument(0);
-                        p.setShipmentPackageId(shipmentPackageIdSeq.getAndIncrement());
-                        return p;
-                    });
-                    lenient().when(shipmentPackageProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-
-                    assertDoesNotThrow(() -> purchaseOrderService.createPurchaseOrder(testPurchaseOrderRequest));
-                }));
-    }
-
-    // ========================================
-    // Additional Test - Canonical Price Persistence
-    // ========================================
-
     @Test
-    @DisplayName("Create PO - Persists canonical custom price from request.products[] into ShipmentProduct.allocatedPrice")
-    void createPurchaseOrder_PersistsCanonicalCustomPrice() {
-        // Arrange
-        when(addressRepository.findExactDuplicate(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(),
-                any(), any(), any(), any(), any()))
-                .thenReturn(Optional.empty());
-        when(addressRepository.save(any(Address.class))).thenReturn(testAddress);
-        when(purchaseOrderRepository.save(any(PurchaseOrder.class))).thenReturn(testPurchaseOrder);
-        when(orderSummaryRepository.save(any(OrderSummary.class))).thenReturn(testOrderSummary);
-        AtomicLong shipmentIdSeq = new AtomicLong(1L);
-        when(shipmentRepository.save(any(Shipment.class))).thenAnswer(invocation -> {
-            Shipment s = invocation.getArgument(0);
-            s.setShipmentId(shipmentIdSeq.getAndIncrement());
-            return s;
-        });
+    @DisplayName("Create PO - Persists canonical custom price")
+    void createPurchaseOrder_PersistsCanonicalCustomPrice_Success() {
+        // ARRANGE
+        stubSuccessfulPurchaseOrderCreate();
+        ArgumentCaptor<List<ShipmentProduct>> captor = ArgumentCaptor.forClass((Class) List.class);
+        stubShipmentProductRepositorySaveAllCapture(captor);
 
-        @SuppressWarnings("unchecked")
-        org.mockito.ArgumentCaptor<List<ShipmentProduct>> captor = 
-            (org.mockito.ArgumentCaptor<List<ShipmentProduct>>) (org.mockito.ArgumentCaptor<?>) 
-            org.mockito.ArgumentCaptor.forClass(List.class);
-        when(shipmentProductRepository.saveAll(captor.capture())).thenAnswer(invocation -> invocation.getArgument(0));
-
-        AtomicLong shipmentPackageIdSeq = new AtomicLong(1L);
-        when(shipmentPackageRepository.save(any(ShipmentPackage.class))).thenAnswer(invocation -> {
-            ShipmentPackage p = invocation.getArgument(0);
-            p.setShipmentPackageId(shipmentPackageIdSeq.getAndIncrement());
-            return p;
-        });
-        when(shipmentPackageProductRepository.saveAll(anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-
-        // Act
+        // ACT
         assertDoesNotThrow(() -> purchaseOrderService.createPurchaseOrder(testPurchaseOrderRequest));
 
-        // Assert - Verify canonical price from products[] is persisted
+        // ASSERT
         List<ShipmentProduct> saved = captor.getValue();
         assertNotNull(saved);
         assertFalse(saved.isEmpty());
+        assertEquals(testPurchaseOrderRequest.getProducts().get(0).getPricePerUnit(),
+                saved.get(0).getAllocatedPrice());
+    }
+
+    /*
+     **********************************************************************************************
+     * FAILURE / EXCEPTION TESTS
+     **********************************************************************************************
+     */
+
+    /**
+     * Purpose: Verify null request is rejected.
+     * Expected Result: BadRequestException is thrown.
+     * Assertions: Exception message matches InvalidRequest.
+     */
+    @Test
+    @DisplayName("Create PO - Null Request - Throws BadRequestException")
+    void createPurchaseOrder_NullRequest_ThrowsBadRequestException() {
+        // ACT & ASSERT
+        assertThrowsBadRequest(ErrorMessages.PurchaseOrderErrorMessages.InvalidRequest,
+                () -> purchaseOrderService.createPurchaseOrder(null));
+    }
+
+    /**
+     * Purpose: Verify null order summary is rejected.
+     * Expected Result: BadRequestException is thrown.
+     * Assertions: Exception message matches OrderSummary InvalidRequest.
+     */
+    @Test
+    @DisplayName("Create PO - Null Order Summary - Throws BadRequestException")
+    void createPurchaseOrder_NullOrderSummary_ThrowsBadRequestException() {
+        // ARRANGE
+        testPurchaseOrderRequest.setOrderSummary(null);
+
+        // ACT & ASSERT
+        assertThrowsBadRequest(ErrorMessages.OrderSummaryErrorMessages.InvalidRequest,
+                () -> purchaseOrderService.createPurchaseOrder(testPurchaseOrderRequest));
     }
 
     /*
@@ -226,26 +155,68 @@ public class CreatePurchaseOrderTest extends PurchaseOrderServiceTestBase {
      **********************************************************************************************
      */
 
+    /**
+     * Purpose: Verify unauthorized access is blocked at the controller level.
+     * Expected Result: Unauthorized status is returned.
+     * Assertions: Response status is 401 UNAUTHORIZED.
+     */
+    @Test
+    @DisplayName("createPurchaseOrder - Controller Permission - Unauthorized")
+    void createPurchaseOrder_controller_permission_unauthorized() {
+        // ARRANGE
+        PurchaseOrderController controller = new PurchaseOrderController(purchaseOrderServiceMock);
+        stubPurchaseOrderServiceThrowsUnauthorizedOnCreate();
+
+        // ACT
+        ResponseEntity<?> response = controller.createPurchaseOrder(testPurchaseOrderRequest);
+
+        // ASSERT
+        assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
+    }
+
     @Test
     @DisplayName("createPurchaseOrder - Verify @PreAuthorize Annotation")
     void createPurchaseOrder_VerifyPreAuthorizeAnnotation() throws NoSuchMethodException {
-        Method method = PurchaseOrderController.class.getMethod("createPurchaseOrder", PurchaseOrderRequestModel.class);
+        // ARRANGE
+        Method method = PurchaseOrderController.class.getMethod("createPurchaseOrder",
+                com.example.SpringApi.Models.RequestModels.PurchaseOrderRequestModel.class);
+
+        // ACT
         PreAuthorize annotation = method.getAnnotation(PreAuthorize.class);
+
+        // ASSERT
         assertNotNull(annotation, "@PreAuthorize annotation should be present on createPurchaseOrder");
         assertTrue(annotation.value().contains(Authorizations.INSERT_PURCHASE_ORDERS_PERMISSION),
                 "@PreAuthorize should reference INSERT_PURCHASE_ORDERS_PERMISSION");
     }
 
+    /**
+     * Purpose: Verify controller delegates to service.
+     * Expected Result: Service is called once and HTTP 200 returned.
+     * Assertions: Delegation and response status are correct.
+     */
     @Test
     @DisplayName("createPurchaseOrder - Controller delegates to service")
     void createPurchaseOrder_WithValidRequest_DelegatesToService() {
-        PurchaseOrderService mockService = mock(PurchaseOrderService.class);
-        PurchaseOrderController controller = new PurchaseOrderController(mockService);
-        doNothing().when(mockService).createPurchaseOrder(testPurchaseOrderRequest);
+        // ARRANGE
+        PurchaseOrderController controller = new PurchaseOrderController(purchaseOrderServiceMock);
+        stubPurchaseOrderServiceCreateDoNothing();
 
+        // ACT
         ResponseEntity<?> response = controller.createPurchaseOrder(testPurchaseOrderRequest);
 
-        verify(mockService).createPurchaseOrder(testPurchaseOrderRequest);
+        // ASSERT
         assertEquals(HttpStatus.OK, response.getStatusCode());
+    }
+
+    private void stubSuccessfulPurchaseOrderCreate() {
+        stubPurchaseOrderRepositorySave(testPurchaseOrder);
+        stubOrderSummaryRepositorySave(testOrderSummary);
+        stubAddressRepositoryFindExactDuplicate(Optional.empty());
+        stubAddressRepositorySave(testAddress);
+        stubShipmentRepositorySaveAssigningId(1L);
+        stubShipmentProductRepositorySaveAll();
+        stubShipmentPackageRepositorySaveAssigningId(1L);
+        stubShipmentPackageProductRepositorySaveAll();
     }
 }
